<resources>
    <string name="prosthetic_arm_status">Prosthetic Arm Status</string>
    <string name="sensor_1">Sensor 1</string>
    <string name="sensor_2">Sensor 2</string>
    <string name="connect_to_bluetooth">Connect to Bluetooth</string>
    <string name="settings_and_calibration">Settings and Calibration</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="tamil">Tamil</string>
    <string name="telugu">Telugu</string>
    <string name="malayalam">Malayalam</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="calibrate">Calibrate</string>
    <string name="calibration">Calibration</string>
    <string name="language">Language</string>

    <string-array name="language_options">
        <item>English</item>
        <item>Hindi</item>
        <item>Tamil</item>
        <item>Telugu</item>
        <item>Malayalam</item>
    </string-array>
</resources>
